tests/all_arith/all_arith.exp
Error ------------------------------------------------------------------------------------------------ all_arith.js:21:2

Cannot use operator `+` with operands number [1] and bigint [2] [unsafe-addition]

   all_arith.js:21:2
   21| (aNumber + aBigint); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:5:22
    5| declare var aNumber: number;
                            ^^^^^^ [1]
   all_arith.js:7:22
    7| declare var aBigint: bigint;
                            ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:22:2

Cannot use operator `+` with operands number [1] and `Date` [2] [unsafe-addition]

   all_arith.js:22:2
   22| (aNumber + aDate); // error
        ^^^^^^^^^^^^^^^

References:
   all_arith.js:5:22
    5| declare var aNumber: number;
                            ^^^^^^ [1]
   all_arith.js:8:20
    8| declare var aDate: Date;
                          ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:23:2

Cannot use operator `+` with operands number [1] and boolean [2] [unsafe-addition]

   all_arith.js:23:2
   23| (aNumber + aBoolean); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:5:22
    5| declare var aNumber: number;
                            ^^^^^^ [1]
   all_arith.js:9:23
    9| declare var aBoolean: boolean;
                             ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:24:2

Cannot use operator `+` with operands number [1] and `T` [2] [unsafe-addition]

   all_arith.js:24:2
   24| (aNumber + aT); // error
        ^^^^^^^^^^^^

References:
   all_arith.js:5:22
    5| declare var aNumber: number;
                            ^^^^^^ [1]
   all_arith.js:10:17
   10| declare var aT: T;
                       ^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:25:2

Cannot use operator `+` with operands number [1] and null [2] [unsafe-addition]

   all_arith.js:25:2
   25| (aNumber + null); // error
        ^^^^^^^^^^^^^^

References:
   all_arith.js:5:22
    5| declare var aNumber: number;
                            ^^^^^^ [1]
   all_arith.js:25:12
   25| (aNumber + null); // error
                  ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:26:2

Cannot use operator `+` with operands number [1] and array type [2] [unsafe-addition]

   all_arith.js:26:2
   26| (aNumber + anArray); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:5:22
    5| declare var aNumber: number;
                            ^^^^^^ [1]
   all_arith.js:12:22
   12| declare var anArray: Array<empty>
                            ^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:27:2

Cannot use operator `+` with operands number [1] and object type [2] [unsafe-addition]

   all_arith.js:27:2
   27| (aNumber + anObject); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:5:22
    5| declare var aNumber: number;
                            ^^^^^^ [1]
   all_arith.js:13:23
   13| declare var anObject: {}
                             ^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:28:2

Cannot use operator `+` with operands number [1] and mixed [2] [unsafe-addition]

   all_arith.js:28:2
   28| (aNumber + aMixed); // error
        ^^^^^^^^^^^^^^^^

References:
   all_arith.js:5:22
    5| declare var aNumber: number;
                            ^^^^^^ [1]
   all_arith.js:14:21
   14| declare var aMixed: mixed;
                           ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:34:2

Cannot use operator `*` with operands number [1] and string [2] [unsafe-arithmetic]

   all_arith.js:34:2
   34| (aNumber * aString); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:5:22
    5| declare var aNumber: number;
                            ^^^^^^ [1]
   all_arith.js:6:22
    6| declare var aString: string;
                            ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:35:2

Cannot use operator `*` with operands number [1] and bigint [2] [unsafe-arithmetic]

   all_arith.js:35:2
   35| (aNumber * aBigint); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:5:22
    5| declare var aNumber: number;
                            ^^^^^^ [1]
   all_arith.js:7:22
    7| declare var aBigint: bigint;
                            ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:36:2

Cannot use operator `*` with operands number [1] and `Date` [2] [unsafe-arithmetic]

   all_arith.js:36:2
   36| (aNumber * aDate); // error
        ^^^^^^^^^^^^^^^

References:
   all_arith.js:5:22
    5| declare var aNumber: number;
                            ^^^^^^ [1]
   all_arith.js:8:20
    8| declare var aDate: Date;
                          ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:37:2

Cannot use operator `*` with operands number [1] and boolean [2] [unsafe-arithmetic]

   all_arith.js:37:2
   37| (aNumber * aBoolean); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:5:22
    5| declare var aNumber: number;
                            ^^^^^^ [1]
   all_arith.js:9:23
    9| declare var aBoolean: boolean;
                             ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:38:2

Cannot use operator `*` with operands number [1] and `T` [2] [unsafe-arithmetic]

   all_arith.js:38:2
   38| (aNumber * aT); // error
        ^^^^^^^^^^^^

References:
   all_arith.js:5:22
    5| declare var aNumber: number;
                            ^^^^^^ [1]
   all_arith.js:10:17
   10| declare var aT: T;
                       ^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:39:2

Cannot use operator `*` with operands number [1] and null [2] [unsafe-arithmetic]

   all_arith.js:39:2
   39| (aNumber * null); // error
        ^^^^^^^^^^^^^^

References:
   all_arith.js:5:22
    5| declare var aNumber: number;
                            ^^^^^^ [1]
   all_arith.js:39:12
   39| (aNumber * null); // error
                  ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:40:2

Cannot use operator `*` with operands number [1] and array type [2] [unsafe-arithmetic]

   all_arith.js:40:2
   40| (aNumber * anArray); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:5:22
    5| declare var aNumber: number;
                            ^^^^^^ [1]
   all_arith.js:12:22
   12| declare var anArray: Array<empty>
                            ^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:41:2

Cannot use operator `*` with operands number [1] and object type [2] [unsafe-arithmetic]

   all_arith.js:41:2
   41| (aNumber * anObject); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:5:22
    5| declare var aNumber: number;
                            ^^^^^^ [1]
   all_arith.js:13:23
   13| declare var anObject: {}
                             ^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:42:2

Cannot use operator `*` with operands number [1] and mixed [2] [unsafe-arithmetic]

   all_arith.js:42:2
   42| (aNumber * aMixed); // error
        ^^^^^^^^^^^^^^^^

References:
   all_arith.js:5:22
    5| declare var aNumber: number;
                            ^^^^^^ [1]
   all_arith.js:14:21
   14| declare var aMixed: mixed;
                           ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:48:2

Cannot use operator `+` with operands string [1] and bigint [2] [unsafe-addition]

   all_arith.js:48:2
   48| (aString + aBigint); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
    6| declare var aString: string;
                            ^^^^^^ [1]
   all_arith.js:7:22
    7| declare var aBigint: bigint;
                            ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:49:2

Cannot use operator `+` with operands string [1] and `Date` [2] [unsafe-addition]

   all_arith.js:49:2
   49| (aString + aDate); // error
        ^^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
    6| declare var aString: string;
                            ^^^^^^ [1]
   all_arith.js:8:20
    8| declare var aDate: Date;
                          ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:50:2

Cannot use operator `+` with operands string [1] and boolean [2] [unsafe-addition]

   all_arith.js:50:2
   50| (aString + aBoolean); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
    6| declare var aString: string;
                            ^^^^^^ [1]
   all_arith.js:9:23
    9| declare var aBoolean: boolean;
                             ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:51:2

Cannot use operator `+` with operands string [1] and `T` [2] [unsafe-addition]

   all_arith.js:51:2
   51| (aString + aT); // error
        ^^^^^^^^^^^^

References:
   all_arith.js:6:22
    6| declare var aString: string;
                            ^^^^^^ [1]
   all_arith.js:10:17
   10| declare var aT: T;
                       ^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:52:2

Cannot use operator `+` with operands string [1] and null [2] [unsafe-addition]

   all_arith.js:52:2
   52| (aString + null); // error
        ^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
    6| declare var aString: string;
                            ^^^^^^ [1]
   all_arith.js:52:12
   52| (aString + null); // error
                  ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:53:2

Cannot use operator `+` with operands string [1] and array type [2] [unsafe-addition]

   all_arith.js:53:2
   53| (aString + anArray); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
    6| declare var aString: string;
                            ^^^^^^ [1]
   all_arith.js:12:22
   12| declare var anArray: Array<empty>
                            ^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:54:2

Cannot use operator `+` with operands string [1] and object type [2] [unsafe-addition]

   all_arith.js:54:2
   54| (aString + anObject); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
    6| declare var aString: string;
                            ^^^^^^ [1]
   all_arith.js:13:23
   13| declare var anObject: {}
                             ^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:55:2

Cannot use operator `+` with operands string [1] and mixed [2] [unsafe-addition]

   all_arith.js:55:2
   55| (aString + aMixed); // error
        ^^^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
    6| declare var aString: string;
                            ^^^^^^ [1]
   all_arith.js:14:21
   14| declare var aMixed: mixed;
                           ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:60:2

Cannot use operator `*` with operands string [1] and string [1] [unsafe-arithmetic]

   all_arith.js:60:2
   60| (aString * aString); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
    6| declare var aString: string;
                            ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ all_arith.js:61:2

Cannot use operator `*` with operands string [1] and bigint [2] [unsafe-arithmetic]

   all_arith.js:61:2
   61| (aString * aBigint); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
    6| declare var aString: string;
                            ^^^^^^ [1]
   all_arith.js:7:22
    7| declare var aBigint: bigint;
                            ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:62:2

Cannot use operator `*` with operands string [1] and `Date` [2] [unsafe-arithmetic]

   all_arith.js:62:2
   62| (aString * aDate); // error
        ^^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
    6| declare var aString: string;
                            ^^^^^^ [1]
   all_arith.js:8:20
    8| declare var aDate: Date;
                          ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:63:2

Cannot use operator `*` with operands string [1] and boolean [2] [unsafe-arithmetic]

   all_arith.js:63:2
   63| (aString * aBoolean); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
    6| declare var aString: string;
                            ^^^^^^ [1]
   all_arith.js:9:23
    9| declare var aBoolean: boolean;
                             ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:64:2

Cannot use operator `*` with operands string [1] and `T` [2] [unsafe-arithmetic]

   all_arith.js:64:2
   64| (aString * aT); // error
        ^^^^^^^^^^^^

References:
   all_arith.js:6:22
    6| declare var aString: string;
                            ^^^^^^ [1]
   all_arith.js:10:17
   10| declare var aT: T;
                       ^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:65:2

Cannot use operator `*` with operands string [1] and null [2] [unsafe-arithmetic]

   all_arith.js:65:2
   65| (aString * null); // error
        ^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
    6| declare var aString: string;
                            ^^^^^^ [1]
   all_arith.js:65:12
   65| (aString * null); // error
                  ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:66:2

Cannot use operator `*` with operands string [1] and array type [2] [unsafe-arithmetic]

   all_arith.js:66:2
   66| (aString * anArray); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
    6| declare var aString: string;
                            ^^^^^^ [1]
   all_arith.js:12:22
   12| declare var anArray: Array<empty>
                            ^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:67:2

Cannot use operator `*` with operands string [1] and object type [2] [unsafe-arithmetic]

   all_arith.js:67:2
   67| (aString * anObject); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
    6| declare var aString: string;
                            ^^^^^^ [1]
   all_arith.js:13:23
   13| declare var anObject: {}
                             ^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:68:2

Cannot use operator `*` with operands string [1] and mixed [2] [unsafe-arithmetic]

   all_arith.js:68:2
   68| (aString * aMixed); // error
        ^^^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
    6| declare var aString: string;
                            ^^^^^^ [1]
   all_arith.js:14:21
   14| declare var aMixed: mixed;
                           ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:74:2

Cannot use operator `+` with operands bigint [1] and `Date` [2] [unsafe-addition]

   all_arith.js:74:2
   74| (aBigint + aDate); // error
        ^^^^^^^^^^^^^^^

References:
   all_arith.js:7:22
    7| declare var aBigint: bigint;
                            ^^^^^^ [1]
   all_arith.js:8:20
    8| declare var aDate: Date;
                          ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:75:2

Cannot use operator `+` with operands bigint [1] and boolean [2] [unsafe-addition]

   all_arith.js:75:2
   75| (aBigint + aBoolean); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:7:22
    7| declare var aBigint: bigint;
                            ^^^^^^ [1]
   all_arith.js:9:23
    9| declare var aBoolean: boolean;
                             ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:76:2

Cannot use operator `+` with operands bigint [1] and `T` [2] [unsafe-addition]

   all_arith.js:76:2
   76| (aBigint + aT); // error
        ^^^^^^^^^^^^

References:
   all_arith.js:7:22
    7| declare var aBigint: bigint;
                            ^^^^^^ [1]
   all_arith.js:10:17
   10| declare var aT: T;
                       ^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:77:2

Cannot use operator `+` with operands bigint [1] and null [2] [unsafe-addition]

   all_arith.js:77:2
   77| (aBigint + null); // error
        ^^^^^^^^^^^^^^

References:
   all_arith.js:7:22
    7| declare var aBigint: bigint;
                            ^^^^^^ [1]
   all_arith.js:77:12
   77| (aBigint + null); // error
                  ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:78:2

Cannot use operator `+` with operands bigint [1] and array type [2] [unsafe-addition]

   all_arith.js:78:2
   78| (aBigint + anArray); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:7:22
    7| declare var aBigint: bigint;
                            ^^^^^^ [1]
   all_arith.js:12:22
   12| declare var anArray: Array<empty>
                            ^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:79:2

Cannot use operator `+` with operands bigint [1] and object type [2] [unsafe-addition]

   all_arith.js:79:2
   79| (aBigint + anObject); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:7:22
    7| declare var aBigint: bigint;
                            ^^^^^^ [1]
   all_arith.js:13:23
   13| declare var anObject: {}
                             ^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:80:2

Cannot use operator `+` with operands bigint [1] and mixed [2] [unsafe-addition]

   all_arith.js:80:2
   80| (aBigint + aMixed); // error
        ^^^^^^^^^^^^^^^^

References:
   all_arith.js:7:22
    7| declare var aBigint: bigint;
                            ^^^^^^ [1]
   all_arith.js:14:21
   14| declare var aMixed: mixed;
                           ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:86:2

Cannot use operator `*` with operands bigint [1] and `Date` [2] [unsafe-arithmetic]

   all_arith.js:86:2
   86| (aBigint * aDate); // error
        ^^^^^^^^^^^^^^^

References:
   all_arith.js:7:22
    7| declare var aBigint: bigint;
                            ^^^^^^ [1]
   all_arith.js:8:20
    8| declare var aDate: Date;
                          ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:87:2

Cannot use operator `*` with operands bigint [1] and boolean [2] [unsafe-arithmetic]

   all_arith.js:87:2
   87| (aBigint * aBoolean); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:7:22
    7| declare var aBigint: bigint;
                            ^^^^^^ [1]
   all_arith.js:9:23
    9| declare var aBoolean: boolean;
                             ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:88:2

Cannot use operator `*` with operands bigint [1] and `T` [2] [unsafe-arithmetic]

   all_arith.js:88:2
   88| (aBigint * aT); // error
        ^^^^^^^^^^^^

References:
   all_arith.js:7:22
    7| declare var aBigint: bigint;
                            ^^^^^^ [1]
   all_arith.js:10:17
   10| declare var aT: T;
                       ^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:89:2

Cannot use operator `*` with operands bigint [1] and null [2] [unsafe-arithmetic]

   all_arith.js:89:2
   89| (aBigint * null); // error
        ^^^^^^^^^^^^^^

References:
   all_arith.js:7:22
    7| declare var aBigint: bigint;
                            ^^^^^^ [1]
   all_arith.js:89:12
   89| (aBigint * null); // error
                  ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:90:2

Cannot use operator `*` with operands bigint [1] and array type [2] [unsafe-arithmetic]

   all_arith.js:90:2
   90| (aBigint * anArray); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:7:22
    7| declare var aBigint: bigint;
                            ^^^^^^ [1]
   all_arith.js:12:22
   12| declare var anArray: Array<empty>
                            ^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:91:2

Cannot use operator `*` with operands bigint [1] and object type [2] [unsafe-arithmetic]

   all_arith.js:91:2
   91| (aBigint * anObject); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:7:22
    7| declare var aBigint: bigint;
                            ^^^^^^ [1]
   all_arith.js:13:23
   13| declare var anObject: {}
                             ^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:92:2

Cannot use operator `*` with operands bigint [1] and mixed [2] [unsafe-arithmetic]

   all_arith.js:92:2
   92| (aBigint * aMixed); // error
        ^^^^^^^^^^^^^^^^

References:
   all_arith.js:7:22
    7| declare var aBigint: bigint;
                            ^^^^^^ [1]
   all_arith.js:14:21
   14| declare var aMixed: mixed;
                           ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:97:2

Cannot use operator `+` with operands `Date` [1] and `Date` [1] [unsafe-addition]

   all_arith.js:97:2
   97| (aDate + aDate); // error
        ^^^^^^^^^^^^^

References:
   all_arith.js:8:20
    8| declare var aDate: Date;
                          ^^^^ [1]


Error ------------------------------------------------------------------------------------------------ all_arith.js:98:2

Cannot use operator `+` with operands `Date` [1] and boolean [2] [unsafe-addition]

   all_arith.js:98:2
   98| (aDate + aBoolean); // error
        ^^^^^^^^^^^^^^^^

References:
   all_arith.js:8:20
    8| declare var aDate: Date;
                          ^^^^ [1]
   all_arith.js:9:23
    9| declare var aBoolean: boolean;
                             ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:99:2

Cannot use operator `+` with operands `Date` [1] and `T` [2] [unsafe-addition]

   all_arith.js:99:2
   99| (aDate + aT); // error
        ^^^^^^^^^^

References:
   all_arith.js:8:20
    8| declare var aDate: Date;
                          ^^^^ [1]
   all_arith.js:10:17
   10| declare var aT: T;
                       ^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:100:2

Cannot use operator `+` with operands `Date` [1] and null [2] [unsafe-addition]

   all_arith.js:100:2
   100| (aDate + null); // error
         ^^^^^^^^^^^^

References:
   all_arith.js:8:20
     8| declare var aDate: Date;
                           ^^^^ [1]
   all_arith.js:100:10
   100| (aDate + null); // error
                 ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:101:2

Cannot use operator `+` with operands `Date` [1] and array type [2] [unsafe-addition]

   all_arith.js:101:2
   101| (aDate + anArray); // error
         ^^^^^^^^^^^^^^^

References:
   all_arith.js:8:20
     8| declare var aDate: Date;
                           ^^^^ [1]
   all_arith.js:12:22
    12| declare var anArray: Array<empty>
                             ^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:102:2

Cannot use operator `+` with operands `Date` [1] and object type [2] [unsafe-addition]

   all_arith.js:102:2
   102| (aDate + anObject); // error
         ^^^^^^^^^^^^^^^^

References:
   all_arith.js:8:20
     8| declare var aDate: Date;
                           ^^^^ [1]
   all_arith.js:13:23
    13| declare var anObject: {}
                              ^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:103:2

Cannot use operator `+` with operands `Date` [1] and mixed [2] [unsafe-addition]

   all_arith.js:103:2
   103| (aDate + aMixed); // error
         ^^^^^^^^^^^^^^

References:
   all_arith.js:8:20
     8| declare var aDate: Date;
                           ^^^^ [1]
   all_arith.js:14:21
    14| declare var aMixed: mixed;
                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:108:2

Cannot use operator `*` with operands `Date` [1] and `Date` [1] [unsafe-arithmetic]

   all_arith.js:108:2
   108| (aDate * aDate); // error
         ^^^^^^^^^^^^^

References:
   all_arith.js:8:20
     8| declare var aDate: Date;
                           ^^^^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:109:2

Cannot use operator `*` with operands `Date` [1] and boolean [2] [unsafe-arithmetic]

   all_arith.js:109:2
   109| (aDate * aBoolean); // error
         ^^^^^^^^^^^^^^^^

References:
   all_arith.js:8:20
     8| declare var aDate: Date;
                           ^^^^ [1]
   all_arith.js:9:23
     9| declare var aBoolean: boolean;
                              ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:110:2

Cannot use operator `*` with operands `Date` [1] and `T` [2] [unsafe-arithmetic]

   all_arith.js:110:2
   110| (aDate * aT); // error
         ^^^^^^^^^^

References:
   all_arith.js:8:20
     8| declare var aDate: Date;
                           ^^^^ [1]
   all_arith.js:10:17
    10| declare var aT: T;
                        ^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:111:2

Cannot use operator `*` with operands `Date` [1] and null [2] [unsafe-arithmetic]

   all_arith.js:111:2
   111| (aDate * null); // error
         ^^^^^^^^^^^^

References:
   all_arith.js:8:20
     8| declare var aDate: Date;
                           ^^^^ [1]
   all_arith.js:111:10
   111| (aDate * null); // error
                 ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:112:2

Cannot use operator `*` with operands `Date` [1] and array type [2] [unsafe-arithmetic]

   all_arith.js:112:2
   112| (aDate * anArray); // error
         ^^^^^^^^^^^^^^^

References:
   all_arith.js:8:20
     8| declare var aDate: Date;
                           ^^^^ [1]
   all_arith.js:12:22
    12| declare var anArray: Array<empty>
                             ^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:113:2

Cannot use operator `*` with operands `Date` [1] and object type [2] [unsafe-arithmetic]

   all_arith.js:113:2
   113| (aDate * anObject); // error
         ^^^^^^^^^^^^^^^^

References:
   all_arith.js:8:20
     8| declare var aDate: Date;
                           ^^^^ [1]
   all_arith.js:13:23
    13| declare var anObject: {}
                              ^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:114:2

Cannot use operator `*` with operands `Date` [1] and mixed [2] [unsafe-arithmetic]

   all_arith.js:114:2
   114| (aDate * aMixed); // error
         ^^^^^^^^^^^^^^

References:
   all_arith.js:8:20
     8| declare var aDate: Date;
                           ^^^^ [1]
   all_arith.js:14:21
    14| declare var aMixed: mixed;
                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:119:2

Cannot use operator `+` with operands boolean [1] and boolean [1] [unsafe-addition]

   all_arith.js:119:2
   119| (aBoolean + aBoolean); // error
         ^^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:9:23
     9| declare var aBoolean: boolean;
                              ^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:120:2

Cannot use operator `+` with operands boolean [1] and `T` [2] [unsafe-addition]

   all_arith.js:120:2
   120| (aBoolean + aT); // error
         ^^^^^^^^^^^^^

References:
   all_arith.js:9:23
     9| declare var aBoolean: boolean;
                              ^^^^^^^ [1]
   all_arith.js:10:17
    10| declare var aT: T;
                        ^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:121:2

Cannot use operator `+` with operands boolean [1] and null [2] [unsafe-addition]

   all_arith.js:121:2
   121| (aBoolean + null); // error
         ^^^^^^^^^^^^^^^

References:
   all_arith.js:9:23
     9| declare var aBoolean: boolean;
                              ^^^^^^^ [1]
   all_arith.js:121:13
   121| (aBoolean + null); // error
                    ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:122:2

Cannot use operator `+` with operands boolean [1] and array type [2] [unsafe-addition]

   all_arith.js:122:2
   122| (aBoolean + anArray); // error
         ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:9:23
     9| declare var aBoolean: boolean;
                              ^^^^^^^ [1]
   all_arith.js:12:22
    12| declare var anArray: Array<empty>
                             ^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:123:2

Cannot use operator `+` with operands boolean [1] and object type [2] [unsafe-addition]

   all_arith.js:123:2
   123| (aBoolean + anObject); // error
         ^^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:9:23
     9| declare var aBoolean: boolean;
                              ^^^^^^^ [1]
   all_arith.js:13:23
    13| declare var anObject: {}
                              ^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:124:2

Cannot use operator `+` with operands boolean [1] and mixed [2] [unsafe-addition]

   all_arith.js:124:2
   124| (aBoolean + aMixed); // error
         ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:9:23
     9| declare var aBoolean: boolean;
                              ^^^^^^^ [1]
   all_arith.js:14:21
    14| declare var aMixed: mixed;
                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:129:2

Cannot use operator `*` with operands boolean [1] and boolean [1] [unsafe-arithmetic]

   all_arith.js:129:2
   129| (aBoolean * aBoolean); // error
         ^^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:9:23
     9| declare var aBoolean: boolean;
                              ^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:130:2

Cannot use operator `*` with operands boolean [1] and `T` [2] [unsafe-arithmetic]

   all_arith.js:130:2
   130| (aBoolean * aT); // error
         ^^^^^^^^^^^^^

References:
   all_arith.js:9:23
     9| declare var aBoolean: boolean;
                              ^^^^^^^ [1]
   all_arith.js:10:17
    10| declare var aT: T;
                        ^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:131:2

Cannot use operator `*` with operands boolean [1] and null [2] [unsafe-arithmetic]

   all_arith.js:131:2
   131| (aBoolean * null); // error
         ^^^^^^^^^^^^^^^

References:
   all_arith.js:9:23
     9| declare var aBoolean: boolean;
                              ^^^^^^^ [1]
   all_arith.js:131:13
   131| (aBoolean * null); // error
                    ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:132:2

Cannot use operator `*` with operands boolean [1] and array type [2] [unsafe-arithmetic]

   all_arith.js:132:2
   132| (aBoolean * anArray); // error
         ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:9:23
     9| declare var aBoolean: boolean;
                              ^^^^^^^ [1]
   all_arith.js:12:22
    12| declare var anArray: Array<empty>
                             ^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:133:2

Cannot use operator `*` with operands boolean [1] and object type [2] [unsafe-arithmetic]

   all_arith.js:133:2
   133| (aBoolean * anObject); // error
         ^^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:9:23
     9| declare var aBoolean: boolean;
                              ^^^^^^^ [1]
   all_arith.js:13:23
    13| declare var anObject: {}
                              ^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:134:2

Cannot use operator `*` with operands boolean [1] and mixed [2] [unsafe-arithmetic]

   all_arith.js:134:2
   134| (aBoolean * aMixed); // error
         ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:9:23
     9| declare var aBoolean: boolean;
                              ^^^^^^^ [1]
   all_arith.js:14:21
    14| declare var aMixed: mixed;
                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:139:2

Cannot use operator `+` with operands `T` [1] and `T` [1] [unsafe-addition]

   all_arith.js:139:2
   139| (aT + aT); // error
         ^^^^^^^

References:
   all_arith.js:10:17
    10| declare var aT: T;
                        ^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:140:2

Cannot use operator `+` with operands `T` [1] and null [2] [unsafe-addition]

   all_arith.js:140:2
   140| (aT + null); // error
         ^^^^^^^^^

References:
   all_arith.js:10:17
    10| declare var aT: T;
                        ^ [1]
   all_arith.js:140:7
   140| (aT + null); // error
              ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:141:2

Cannot use operator `+` with operands `T` [1] and array type [2] [unsafe-addition]

   all_arith.js:141:2
   141| (aT + anArray); // error
         ^^^^^^^^^^^^

References:
   all_arith.js:10:17
    10| declare var aT: T;
                        ^ [1]
   all_arith.js:12:22
    12| declare var anArray: Array<empty>
                             ^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:142:2

Cannot use operator `+` with operands `T` [1] and object type [2] [unsafe-addition]

   all_arith.js:142:2
   142| (aT + anObject); // error
         ^^^^^^^^^^^^^

References:
   all_arith.js:10:17
    10| declare var aT: T;
                        ^ [1]
   all_arith.js:13:23
    13| declare var anObject: {}
                              ^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:143:2

Cannot use operator `+` with operands `T` [1] and mixed [2] [unsafe-addition]

   all_arith.js:143:2
   143| (aT + aMixed); // error
         ^^^^^^^^^^^

References:
   all_arith.js:10:17
    10| declare var aT: T;
                        ^ [1]
   all_arith.js:14:21
    14| declare var aMixed: mixed;
                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:148:2

Cannot use operator `*` with operands `T` [1] and `T` [1] [unsafe-arithmetic]

   all_arith.js:148:2
   148| (aT * aT); // error
         ^^^^^^^

References:
   all_arith.js:10:17
    10| declare var aT: T;
                        ^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:149:2

Cannot use operator `*` with operands `T` [1] and null [2] [unsafe-arithmetic]

   all_arith.js:149:2
   149| (aT * null); // error
         ^^^^^^^^^

References:
   all_arith.js:10:17
    10| declare var aT: T;
                        ^ [1]
   all_arith.js:149:7
   149| (aT * null); // error
              ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:150:2

Cannot use operator `*` with operands `T` [1] and array type [2] [unsafe-arithmetic]

   all_arith.js:150:2
   150| (aT * anArray); // error
         ^^^^^^^^^^^^

References:
   all_arith.js:10:17
    10| declare var aT: T;
                        ^ [1]
   all_arith.js:12:22
    12| declare var anArray: Array<empty>
                             ^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:151:2

Cannot use operator `*` with operands `T` [1] and object type [2] [unsafe-arithmetic]

   all_arith.js:151:2
   151| (aT * anObject); // error
         ^^^^^^^^^^^^^

References:
   all_arith.js:10:17
    10| declare var aT: T;
                        ^ [1]
   all_arith.js:13:23
    13| declare var anObject: {}
                              ^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:152:2

Cannot use operator `*` with operands `T` [1] and mixed [2] [unsafe-arithmetic]

   all_arith.js:152:2
   152| (aT * aMixed); // error
         ^^^^^^^^^^^

References:
   all_arith.js:10:17
    10| declare var aT: T;
                        ^ [1]
   all_arith.js:14:21
    14| declare var aMixed: mixed;
                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:157:2

Cannot use operator `+` with operands null [1] and null [2] [unsafe-addition]

   all_arith.js:157:2
   157| (null + null); // error
         ^^^^^^^^^^^

References:
   all_arith.js:157:2
   157| (null + null); // error
         ^^^^ [1]
   all_arith.js:157:9
   157| (null + null); // error
                ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:158:2

Cannot use operator `+` with operands null [1] and array type [2] [unsafe-addition]

   all_arith.js:158:2
   158| (null + anArray); // error
         ^^^^^^^^^^^^^^

References:
   all_arith.js:158:2
   158| (null + anArray); // error
         ^^^^ [1]
   all_arith.js:12:22
    12| declare var anArray: Array<empty>
                             ^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:159:2

Cannot use operator `+` with operands null [1] and object type [2] [unsafe-addition]

   all_arith.js:159:2
   159| (null + anObject); // error
         ^^^^^^^^^^^^^^^

References:
   all_arith.js:159:2
   159| (null + anObject); // error
         ^^^^ [1]
   all_arith.js:13:23
    13| declare var anObject: {}
                              ^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:160:2

Cannot use operator `+` with operands null [1] and mixed [2] [unsafe-addition]

   all_arith.js:160:2
   160| (null + aMixed); // error
         ^^^^^^^^^^^^^

References:
   all_arith.js:160:2
   160| (null + aMixed); // error
         ^^^^ [1]
   all_arith.js:14:21
    14| declare var aMixed: mixed;
                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:165:2

Cannot use operator `*` with operands null [1] and null [2] [unsafe-arithmetic]

   all_arith.js:165:2
   165| (null * null); // error
         ^^^^^^^^^^^

References:
   all_arith.js:165:2
   165| (null * null); // error
         ^^^^ [1]
   all_arith.js:165:9
   165| (null * null); // error
                ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:166:2

Cannot use operator `*` with operands null [1] and array type [2] [unsafe-arithmetic]

   all_arith.js:166:2
   166| (null * anArray); // error
         ^^^^^^^^^^^^^^

References:
   all_arith.js:166:2
   166| (null * anArray); // error
         ^^^^ [1]
   all_arith.js:12:22
    12| declare var anArray: Array<empty>
                             ^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:167:2

Cannot use operator `*` with operands null [1] and object type [2] [unsafe-arithmetic]

   all_arith.js:167:2
   167| (null * anObject); // error
         ^^^^^^^^^^^^^^^

References:
   all_arith.js:167:2
   167| (null * anObject); // error
         ^^^^ [1]
   all_arith.js:13:23
    13| declare var anObject: {}
                              ^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:168:2

Cannot use operator `*` with operands null [1] and mixed [2] [unsafe-arithmetic]

   all_arith.js:168:2
   168| (null * aMixed); // error
         ^^^^^^^^^^^^^

References:
   all_arith.js:168:2
   168| (null * aMixed); // error
         ^^^^ [1]
   all_arith.js:14:21
    14| declare var aMixed: mixed;
                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:173:2

Cannot use operator `+` with operands array type [1] and array type [1] [unsafe-addition]

   all_arith.js:173:2
   173| (anArray + anArray); // error
         ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:12:22
    12| declare var anArray: Array<empty>
                             ^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:174:2

Cannot use operator `+` with operands array type [1] and object type [2] [unsafe-addition]

   all_arith.js:174:2
   174| (anArray + anObject); // error
         ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:12:22
    12| declare var anArray: Array<empty>
                             ^^^^^^^^^^^^ [1]
   all_arith.js:13:23
    13| declare var anObject: {}
                              ^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:175:2

Cannot use operator `+` with operands array type [1] and mixed [2] [unsafe-addition]

   all_arith.js:175:2
   175| (anArray + aMixed); // error
         ^^^^^^^^^^^^^^^^

References:
   all_arith.js:12:22
    12| declare var anArray: Array<empty>
                             ^^^^^^^^^^^^ [1]
   all_arith.js:14:21
    14| declare var aMixed: mixed;
                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:180:2

Cannot use operator `*` with operands array type [1] and array type [1] [unsafe-arithmetic]

   all_arith.js:180:2
   180| (anArray * anArray); // error
         ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:12:22
    12| declare var anArray: Array<empty>
                             ^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:181:2

Cannot use operator `*` with operands array type [1] and object type [2] [unsafe-arithmetic]

   all_arith.js:181:2
   181| (anArray * anObject); // error
         ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:12:22
    12| declare var anArray: Array<empty>
                             ^^^^^^^^^^^^ [1]
   all_arith.js:13:23
    13| declare var anObject: {}
                              ^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:182:2

Cannot use operator `*` with operands array type [1] and mixed [2] [unsafe-arithmetic]

   all_arith.js:182:2
   182| (anArray * aMixed); // error
         ^^^^^^^^^^^^^^^^

References:
   all_arith.js:12:22
    12| declare var anArray: Array<empty>
                             ^^^^^^^^^^^^ [1]
   all_arith.js:14:21
    14| declare var aMixed: mixed;
                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:187:2

Cannot use operator `+` with operands object type [1] and object type [1] [unsafe-addition]

   all_arith.js:187:2
   187| (anObject + anObject); // error
         ^^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:13:23
    13| declare var anObject: {}
                              ^^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:188:2

Cannot use operator `+` with operands object type [1] and mixed [2] [unsafe-addition]

   all_arith.js:188:2
   188| (anObject + aMixed); // error
         ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:13:23
    13| declare var anObject: {}
                              ^^ [1]
   all_arith.js:14:21
    14| declare var aMixed: mixed;
                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:193:2

Cannot use operator `*` with operands object type [1] and object type [1] [unsafe-arithmetic]

   all_arith.js:193:2
   193| (anObject * anObject); // error
         ^^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:13:23
    13| declare var anObject: {}
                              ^^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:194:2

Cannot use operator `*` with operands object type [1] and mixed [2] [unsafe-arithmetic]

   all_arith.js:194:2
   194| (anObject * aMixed); // error
         ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:13:23
    13| declare var anObject: {}
                              ^^ [1]
   all_arith.js:14:21
    14| declare var aMixed: mixed;
                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:199:2

Cannot use operator `+` with operands mixed [1] and mixed [1] [unsafe-addition]

   all_arith.js:199:2
   199| (aMixed + aMixed); // error
         ^^^^^^^^^^^^^^^

References:
   all_arith.js:14:21
    14| declare var aMixed: mixed;
                            ^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:204:2

Cannot use operator `*` with operands mixed [1] and mixed [1] [unsafe-arithmetic]

   all_arith.js:204:2
   204| (aMixed * aMixed); // error
         ^^^^^^^^^^^^^^^

References:
   all_arith.js:14:21
    14| declare var aMixed: mixed;
                            ^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:224:2

Cannot perform unsigned right shift because bigint [1] is a bigint, and all bigints are signed.
[bigint-unsigned-right-shift]

   all_arith.js:224:2
   224| (aBigint >>> aBigint); // error
         ^^^^^^^

References:
   all_arith.js:7:22
     7| declare var aBigint: bigint;
                             ^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:225:2

Cannot perform unsigned right shift because bigint [1] is a bigint, and all bigints are signed.
[bigint-unsigned-right-shift]

   all_arith.js:225:2
   225| (aBigint >>> aNumber); // error
         ^^^^^^^

References:
   all_arith.js:7:22
     7| declare var aBigint: bigint;
                             ^^^^^^ [1]



Found 106 errors
